test/types/range/elliot/anonymousCountedRange-error.good
anonymousCountedRange-error.chpl:6: error: halt reached - Iteration over a bounded range may be incorrect due to overflow.
